--- a/ecommerce-frontend/package.json
+++ b/ecommerce-frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "axios": "^1.9.0",
+    "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.12.1",
     "framer-motion": "^12.9.2",
     "react": "^19.0.0",
